Fix field container width (forms w/o wide labels)
Broken in 2c3bccc1.

[ci skip]

--- a/app/assets/stylesheets/content/_forms.sass
+++ b/app/assets/stylesheets/content/_forms.sass
@@ -190,7 +190,7 @@ fieldset
       color:    smartscale(#008BD0, 30%)
 
 .form--field-container
-  @include grid-content(8)
+  @include grid-content(10)
   display: flex
 
   .form.-wide-labels &
